    hex2num would accept a cell array of strings of arbitrary dimension
    but would always return a column vector.

 ** The "names" option used in regular expressions now returns a struct
    array, rather than a struct with a cell array for each field.  This
    change was made for Matlab compatibility.

 ** Other new functions added in 4.4:

      corrcoef
      gsvd
      hgtransform
      getframe

 ** Deprecated functions.

    The following functions have been deprecated in Octave 4.4 and will
    be removed from Octave 4.8 (or whatever version is the second major
    release after 4.4):

      Function             | Replacement
      ---------------------|------------------

 ** The following functions were deprecated in Octave 4.0 and have been
    removed from Octave 4.4.

      allow_noninteger_range_as_index
      bicubic
      delaunay3
      do_braindead_shortcircuit_evaluation
      dump_prefs
      find_dir_in_path
      finite
      fmod
      fnmatch
      gmap40
      loadaudio
      luinc
      mouse_wheel_zoom
      nfields
      octave_tmp_file_name
      playaudio
      saveaudio
      setaudio
      syl
      usage

 ** Deprecated graphics properties.

    The following properties or allowed corresponding values have been
    deprecated in Octave 4.4 and will be removed from Octave 4.8 (or whatever
    version is the second major release after 4.4):

      Object               | Property                | Value
      ---------------------|-------------------------|-------------------
      figure               | doublebuffer            |
                           | mincolormap             |
                           | wvisual                 |
                           | wvisualmode             |
                           | xdisplay                |
                           | xvisual                 |
                           | xvisualmode             |
      axes                 | drawmode                |