@@ -38,9 +38,10 @@ Summary of important user-visible changes for version 4.4 (yyyy-mm-dd):
  ** Other new functions added in 4.4:
 
       corrcoef
+      getframe
       gsvd
       hgtransform
-      getframe
+      humps
 
  ** Deprecated functions.
 
